# xmindparser

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  README_CN.md  publish.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  test-publish.yml
doc/: example.json  example.md  example.xml  example.yaml  example_2026.json  example_2026_with_id.json  example_with_id.json  example_zen.json  example_zen.yaml  example_zen_with_id.json
tests/: test.xmind  test_xmindparser.py  xmind_2026.xmind  xmind_2026.yaml  xmind_zen.xmind  xmindparser_tests.py  xmindzen.xmind
xmindparser/: __init__.py  main.py  xreader.py  zenreader.py
